[project]
name = "rpachallenger"
version = "0.1.0"
description = "Desafio de RPA com multi formas de rodar o mesmo projeto. Selenium, playwrite e requests. Seleção de opções com CLI"
authors = [
    {name = "Patrick Reis",email = "patrickwreis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "selenium (>=4.34.0,<5.0.0)",
    "pywinauto (>=0.6.9,<0.7.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "playwright (>=1.53.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 109

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.12.1"

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
